--- a/ru.po
+++ b/ru.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: po 4a\n"
 "POT-Creation-Date: 2013-05-22 13:23-0400\n"
-"PO-Revision-Date: 2014-05-16 22:12+0200\n"
+"PO-Revision-Date: 2014-05-17 23:36+0200\n"
 "Last-Translator: Lev Lamberov <l.lamberov@gmail.com>\n"
 "Language-Team: ru <debian-l10n-russian@lists.debian.org>\n"
 "Language: ru\n"
@@ -10371,6 +10371,18 @@ msgid ""
 "(<command>dak</command> refuses to install new packages if they don't have a "
 "version number greater than the currently available one)."
 msgstr ""
+"Иногда первоначальная загрузка, связанная с переносом, проблематична из-за "
+"того, что окружение, "
+"в котором был собран пакет, не было достаточно хорошо (устаревшая или не "
+"используемая более "
+"библиотека, плохой компилятор и т. д.).  Тогда вам может потребоваться заново "
+"скомпилировать пакет в "
+"обновлённом окружении.  Тем не менее, в этом случае вам придётся увеличить "
+"номер версии пакета, "
+"чтобы старый плохой пакет был заменён на новый в архиве Debian "
+"(<command>dak</command> отказывается устанавливать новые пакеты, если номер "
+"их версии не больше "
+"уже доступных пакетов)."
 
 #. type: Content of: <chapter><section><section><section><para>
 #: pkgs.dbk:1711
@@ -10381,6 +10393,12 @@ msgid ""
 "generated using dpkg's substitution variable <literal>$(Source-Version)</"
 "literal>."
 msgstr ""
+"Вам следует убедиться, что ваша двоичная NMU не приведёт к тому, что пакет "
+"перестанет устанавливаться.  Это может произойти в случае, если пакет с "
+"исходным кодом порождает зависящие и"
+"независящие от архитектуры пакеты, взаимные зависимости которые созданы "
+"подстановкой переменной dpkg <literal>$(Source-Version)</"
+"literal>."
 
 #. type: Content of: <chapter><section><section><section><para>
 #: pkgs.dbk:1717
@@ -10389,6 +10407,9 @@ msgid ""
 "only NMUs — there is no need in this case to trigger all other architectures "
 "to consider themselves out of date or requiring recompilation."
 msgstr ""
+"Несмотря на необходимое изменение журнала изменений, это называется двоичной "
+"NMU — в этом случае нет необходимости делать пакеты других архитектур "
+"устаревшими и заново их компилировать."
 
 #. type: Content of: <chapter><section><section><section><para>
 #: pkgs.dbk:1722
@@ -10399,6 +10420,14 @@ msgid ""
 "the archive maintainers will reject your upload (due to lack of "
 "corresponding source code)."
 msgstr ""
+"Для такой повторной компиляции требуется специальное ``магическое'' "
+"назначение версий, так чтобы "
+"инструменты для сопровождения архива распознали, что хотя даже и имеется "
+"новая Debian-версия, "
+"соответствующего обновления исходного кода не было.  Если вы сделаете это "
+"неправильно, "
+"сопровождающие архива отклонят вашу загрузку (из-за отсутствия "
+"соответствующего исходного кода)."
 
 #. type: Content of: <chapter><section><section><section><para><footnote><para>
 #: pkgs.dbk:1737
@@ -10409,6 +10438,15 @@ msgid ""
 "recompile-only NMUs, source NMUs, and security NMUs on the same package, and "
 "has therefore been abandoned in favor of this new syntax."
 msgstr ""
+"В прошло подобные NMU использовали номер третьего уровня в части Debian "
+"редакции "
+"для обозначения статуса повторной компиляции; тем не менее, этот синтаксис "
+"был "
+"двумысленен в случае родных пакетов и не позволяя правильно определять "
+"порядок "
+"заново скомпилированных NMU, NMU исходного кода и NMU безопасности одного и "
+"того же пакета, потому "
+"он был отброшен и заменён новым синтаксисом."
 
 #. type: Content of: <chapter><section><section><section><para>
 #: pkgs.dbk:1729
@@ -10423,6 +10461,18 @@ msgid ""
 "should have a version number of <literal>3.4+b2</literal>.<placeholder type="
 "\"footnote\" id=\"0\"/>"
 msgstr ""
+"``Магия'' для NMU повторной компиляции включается путём использования "
+"суффикса "
+"в номере версии пакет, имеющего следующий вид: "
+"<literal>b<replaceable>номер</replaceable></literal>.  Например, если "
+"последняя версия пакета, которую вы заново компилируете, была версией <"
+"literal>2.9-3</"
+"literal>, ваша двоичная NMU должна иметь версию <literal>2.9-3+b1</"
+"literal>.  Если последней версией была <literal>3.4+b1</literal> (т. е., "
+"родной пакет, для которого в предыдущий раз уже была выполнена NMU с "
+"повторной компиляцией), ваша двоичная NMU "
+"должна иметь номер версии <literal>3.4+b2</literal>.<placeholder type="
+"\"footnote\" id=\"0\"/>"
 
 #. type: Content of: <chapter><section><section><section><para>
 #: pkgs.dbk:1745
@@ -10431,6 +10481,11 @@ msgid ""
 "buildpackage</command> is <literal>dpkg-buildpackage -B</literal> to only "
 "build the architecture-dependent parts of the package."
 msgstr ""
+"Подобно первоначальной загрузке, связанной с переносом, правильный вызов <"
+"command>dpkg-"
+"buildpackage</command> имеет вид <literal>dpkg-buildpackage -B</literal>, что "
+"означает, что "
+"будут собраны только зависящие от архитектуры части пакета."
 
 #. type: Content of: <chapter><section><section><section><title>
 #: pkgs.dbk:1752
@@ -10449,6 +10504,20 @@ msgid ""
 "next stable release; the release managers decide and announce which "
 "architectures are candidates."
 msgstr ""
+"Те, кто занимаются переносом и выполняют NMU исходного кода, следуют советам "
+"из <xref "
+"linkend=\"nmu\"/>, как и те, кто переносом не занимается.  Тем не менее, "
+"ожидается, что "
+"цикл ожидания для NMU исходного кода, выполненной тем, кто занимается "
+"переносом, меньше, чем для того, кто переносом не занимается, "
+"поскольку те, кто занимается переносом, должны охватить большое количество "
+"пакетов.  Опять же, "
+"ситуация зависит от того, в какой выпуск они хотят осуществить загрузку.  "
+"Также "
+"важно то, является ли данная архитектура кандидатом на включение в "
+"следующий стабильный выпуск; управляющие выпуском решают и сообщают о том, "
+"какие "
+"архитектуры являются такими кандидатами."
 
 #. type: Content of: <chapter><section><section><section><para>
 #: pkgs.dbk:1763
@@ -10464,6 +10533,22 @@ msgid ""
 "<literal>stable</literal> or <literal>testing</literal>, please coordinate "
 "with the appropriate release team first."
 msgstr ""
+"Если вы не занимаетесь переносом и выполняете NMU для <literal>нестабильного<"
+"/literal> выпуска, вам следует "
+"придерживаться приведённых выше советов по переносу, но с двумя изменениями.  "
+"Во-первых, "
+"период ожидания принятия — время между тем, когда было сообщено об ошибке в "
+"систему отслеживания ошибок, и тем, когда для NMU наступает подходящее время "
+"— равен семи дням для тех, кто занимается "
+"переносом, и работает над <literal>нестабильным</literal> выпуском.  Этот "
+"период может быть "
+"уменьшен по усмотрению тех, кто занимается переносом, в случае, если проблема "
+"является критической и представляет собой серьёзную трудность для "
+"процесса переноса пакета.  (Помните, это не является "
+"Политикой, это лишь негласно принято в сообществе.) Для выполнения загрузки в "
+"<literal>стабильный</literal> или <literal>тестируемый</literal> выпуски "
+"свяжитесь с "
+"соответствующей выпускающей командой."
 
 #. type: Content of: <chapter><section><section><section><para>
 #: pkgs.dbk:1775
@@ -10475,6 +10560,16 @@ msgid ""
 "that we have one version of the binary and source package for all "
 "architectures in order to comply with many licenses."
 msgstr ""
+"Во-вторых, те, кто занимается переносом и выполняют NMU исходного кода, "
+"должны убедиться, что сообщение об ошибке, отправленное в "
+"систему отслеживания ошибок, имеет важность <literal>serious</literal> или "
+"выше.  Это гарантирует, что отдельный пакет с исходным кодом может "
+"использоваться для компиляции "
+"пакета для каждой поддерживаемой Debian на момент выпуска архитектуры.  "
+"Важно, "
+"что у нас имеется одна версия двоичного пакета и пакета с исходным кодом для "
+"всех "
+"архитектур для того, чтобы соответствовать множеству лицензий."
 
 #. type: Content of: <chapter><section><section><section><para>
 #: pkgs.dbk:1783
@@ -10486,6 +10581,15 @@ msgid ""
 "document your kludge so that people know to remove it once the external "
 "problems have been fixed."
 msgstr ""
+"Те, кто занимаются переносом, должны попытаться избежать заплат, которые "
+"просто обходят ошибки в "
+"текущей версии окружения компиляции, ядра или libc.  Иногда такие клиджи "
+"не могут помочь.  Если вам нужно обойти ошибки компилятора или чего-то "
+"подобного, "
+"убедитесь, что вы выполнили корректно <literal>#ifdef</literal> для своей "
+"работы; также, "
+"документируйте ваши клиджи, чтобы люди знали, как удалить их когда "
+"внешние проблемы будут исправлены."
 
 #. type: Content of: <chapter><section><section><section><para>
 #: pkgs.dbk:1791
@@ -10495,6 +10599,13 @@ msgid ""
 "have the benefit of the porter's work, even during the waiting period.  Of "
 "course, such locations have no official blessing or status, so buyer beware."
 msgstr ""
+"У тех, кто занимается переносом, также имеется неофициальное место, куда они "
+"могут поместить результаты "
+"своей работы во время периода ожидания.  Это помогает остальным, кто "
+"занимается переносом, "
+"использовать вашу работу даже во время периода ожидания.  Конечно, "
+"такие места не являются официальными и не имеют какого-либо специального "
+"статуса, поэтому будьте внимательны."
 
 #. type: Content of: <chapter><section><section><title>
 #: pkgs.dbk:1801
@@ -10668,6 +10779,9 @@ msgid ""
 "When requesting binNMUs or give-backs (retries after a failed build), please "
 "use the format described at <ulink url=\"&url-release-wb;\"/>."
 msgstr ""
+"При запросе binNMU или возвратов (повторов после неудачной сборки) "
+"используйте "
+"описанный в <ulink url=\"&url-release-wb;\"/> формат."
 
 #. type: Content of: <chapter><section><section><title>
 #: pkgs.dbk:1878
@@ -10684,6 +10798,17 @@ msgid ""
 "literal>), or uses other hardware-specific features not supported on all "
 "architectures."
 msgstr ""
+"Некоторые пакеты всё равно имеют проблемы со сборкой и/или с работой на "
+"некоторых "
+"поддерживаемых Debian архитектурах, они вообще не могут быть перенесены, либо "
+"для "
+"их переноса требуется слишком много времени.  Примером этого является пакет, "
+"который "
+"конкретно связан с SVGA (доступен только для <literal>i386</literal> и <"
+"literal>amd64</"
+"literal>), либо использует другие специфические возможности оборудования, "
+"которые совсем не поддерживаются "
+"на всех архитектурах."
 
 #. type: Content of: <chapter><section><section><para>
 #: pkgs.dbk:1887
@@ -10691,6 +10816,8 @@ msgid ""
 "In order to prevent broken packages from being uploaded to the archive, and "
 "wasting buildd time, you need to do a few things:"
 msgstr ""
+"Для того, чтобы сломанные пакеты не были загружены в архив и не "
+"потратили зря время работы buildd, вам следует выполнить несколько вещей:"
 
 #. type: Content of: <chapter><section><section><itemizedlist><listitem><para>
 #: pkgs.dbk:1893
@@ -10703,6 +10830,17 @@ msgid ""
 "architectures, and also will allow the package to build as soon as the "
 "required functionality is available."
 msgstr ""
+"Во-первых, убедитесь, что ваш пакет <emphasis>действительно</emphasis> не "
+"может быть собран на "
+"архитектурах, которые он не может поддерживать.  Для достижения этого имеется "
+"несколько "
+"способов.  Предпочтительный способ состоит в том, чтобы иметь небольшой "
+"тестовый набор для использования во время "
+"сборки, который будет проверять функциональность пакета и который будет "
+"завершаться неудачей в случае, если пакет не работает.  Отличной идеей "
+"является и то, что это помешает (некоторым) сломанным загрузкам на все "
+"архитектуры, а также позволит пакету собираться сразу как только"
+"требуемая функциональность будет доступна."
 
 #. type: Content of: <chapter><section><section><itemizedlist><listitem><para>
 #: pkgs.dbk:1901
@@ -10712,6 +10850,12 @@ msgid ""
 "architectures in <filename>debian/control</filename>.  This way, the build "
 "will fail also, and indicate this to a human reader without actually trying."
 msgstr ""
+"Кроме того, если вы убеждены, что список поддерживаемых архитектур вполне "
+"постоянен, вам следует изменить <literal>any</literal> на список "
+"поддерживаемых "
+"архитектур в <filename>debian/control</filename>.  При этом способе сборка "
+"опять же завершиться неудачно, пользователю будет сообщено об этом, даже хотя "
+"попытки сборки не было."
 
 #. type: Content of: <chapter><section><section><itemizedlist><listitem><para>
 #: pkgs.dbk:1909
@@ -10722,6 +10866,14 @@ msgid ""
 "version is available as <ulink url=\"&url-buildd-p-a-s;\"/>; please see the "
 "top of the file for whom to contact for changes."
 msgstr ""
+"Для того, чтобы ПО для автоматической сборки не пыталось без необходимости на "
+"то собрать ваш "
+"пакет, в <filename>Packages-arch-specific</filename> должен быть включён "
+"список, "
+"используемый сценарием <command>wanna-build</command>.  Текущая версия "
+"доступна как <ulink url=\"&url-buildd-p-a-s;\"/>; с кем можно связаться по "
+"поводу изменений "
+"см. в начале файла."
 
 #. type: Content of: <chapter><section><section><para>
 #: pkgs.dbk:1918
@@ -10734,6 +10886,17 @@ msgid ""
 "architectures, request their removal by filing a bug against <systemitem "
 "role=\"package\">ftp.debian.org</systemitem>."
 msgstr ""
+"Заметьте, что это недостаточно просто добавить ваш пакет в "
+"<filename>Packages-arch-specific</filename> без того, чтобы его сборка на "
+"неподдерживаемых "
+"архитектурах завершилась неудачно: тот, кто занимается переносом, либо "
+"кто-либо другой, пытающиеся "
+"собрать ваш пакет, может случайно загрузить его, не заметив, что пакет не "
+"работает.  "
+"Если в прошлом некоторые двоичные пакеты были загружены и для "
+"неподдерживаемых "
+"архитектур, запросите их удаление, заполнив сообщение об ошибке в <systemitem "
+"role=\"package\">ftp.debian.org</systemitem>."
 
 #. type: Content of: <chapter><section><section><title>
 #: pkgs.dbk:1929
